--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -1,3 +1,4 @@
 $color-pink-primary: #f1817e;
+$color-pink-dark: #ec5450;
 $color-gray-dark: #263a41;
-$-color-gray-light: #888888;
+$color-gray-light: #888888;
