--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -35,3 +35,22 @@
     color: $color-gray-dark;
   }
 }
+
+.header {
+  &__content {
+    width: 50%;
+    position: absolute;
+    top: 45%;
+    left: 15%;
+  }
+
+  &__heading {
+    width: 80%;
+    margin-bottom: 2rem;
+  }
+
+  &__description {
+    margin-bottom: 2rem;
+    width: 90%;
+  }
+}
