--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -1,4 +1,5 @@
 $color-pink-primary: #f1817e;
 $color-pink-dark: #ec5450;
+$color-pink-light: #fff9f8;
 $color-gray-dark: #263a41;
 $color-gray-light: #888888;
