--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -40,7 +40,7 @@
   &__content {
     width: 50%;
     position: absolute;
-    top: 45%;
+    top: 30%;
     left: 15%;
   }
 
@@ -52,5 +52,11 @@
   &__description {
     margin-bottom: 2rem;
     width: 90%;
+  }
+
+  &__video-label {
+    margin-left: 1rem;
+    font-size: 1.4rem;
+    color: $color-gray-dark;
   }
 }
