--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,6 +1,7 @@
 .header {
-  height: 70vh;
+  height: calc(70vh + 1em);
   position: relative;
+  margin-bottom: 5rem;
 
   &__img {
     z-index: 1;
@@ -26,4 +27,13 @@
       }
     }
   }
+}
+
+.about {
+  margin: 8rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  text-align: center;
 }
