added services gallery

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -37,3 +37,9 @@
   justify-content: space-between;
   text-align: center;
 }
+
+.service {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
