--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,45 @@ body {
   .button__video:hover > * {
     fill: #ec5450; }
 
+.service-card {
+  width: 24%;
+  margin: 0;
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 1fr; }
+  .service-card__img {
+    margin: 0;
+    max-width: 100%;
+    grid-row: 1 / 2;
+    grid-column: 1 /2; }
+  .service-card__caption {
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
+    background-color: transparent;
+    transition: all 0.5s ease-in-out;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    opacity: 0; }
+    .service-card__caption > * {
+      visibility: hidden; }
+    .service-card__caption:hover {
+      background-color: rgba(241, 129, 126, 0.9);
+      opacity: 1; }
+    .service-card__caption:hover > * {
+      opacity: 1;
+      visibility: visible; }
+  .service-card__icon {
+    height: 3rem;
+    width: 3rem;
+    fill: #fff;
+    margin-bottom: 1rem;
+    margin-left: 1rem; }
+  .service-card__text {
+    color: #fff;
+    font-family: "Rufina", serif; }
+
 .nav {
   width: 49%;
   margin-left: 14rem;
@@ -155,3 +194,8 @@ body {
   align-items: center;
   justify-content: space-between;
   text-align: center; }
+
+.service {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between; }
