added Procedures section

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -20,6 +20,12 @@ body {
   color: $color-gray-dark;
 }
 
+.heading__3 {
+  font-family: "Rufina", serif;
+  font-size: 2rem;
+  color: $color-gray-dark;
+}
+
 .header--span {
   color: $color-pink-primary;
   text-transform: uppercase;
