--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,11 @@ body {
   margin-bottom: 3rem;
   color: #263a41; }
 
+.heading__3 {
+  font-family: "Rufina", serif;
+  font-size: 2rem;
+  color: #263a41; }
+
 .header--span {
   color: #f1817e;
   text-transform: uppercase;
@@ -43,17 +48,23 @@ body {
   width: 70%;
   margin-bottom: 3rem; }
 
+.section__margin {
+  margin: 8rem 0; }
+
+.paragraph__margin {
+  margin-bottom: 5rem; }
+
 .button {
   border: none;
   text-transform: uppercase;
   padding: 1.5rem 3.5rem;
   font-weight: 600;
   letter-spacing: 1px;
-  border-radius: 2px; }
+  border-radius: 2px;
+  color: #fff; }
   .button__pink {
     background-color: #f1817e;
-    transition: all 0.2s;
-    color: #fff; }
+    transition: all 0.2s; }
     .button__pink:focus, .button__pink:hover {
       background-color: #ec5450;
       transform: translateY(-3px);
@@ -62,6 +73,10 @@ body {
       transform: translateY(-2px); }
     .button__pink--round {
       border-radius: 50px; }
+  .button__black {
+    background-color: #263a41;
+    border-radius: 50px;
+    transition: all 0.2s; }
 
 .button__video {
   border: none;
@@ -81,6 +96,29 @@ body {
   .button__video:focus > *,
   .button__video:hover > * {
     fill: #ec5450; }
+
+.procedure-card {
+  width: 25%;
+  border: 1px solid #d1d7de;
+  border-radius: 2px;
+  padding: 3.5rem 3rem;
+  transform: all 0.2s;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  .procedure-card:hover {
+    box-shadow: 0 1.1rem 1.1rem rgba(136, 136, 136, 0.11);
+    transform: translateY(-2px); }
+    .procedure-card:hover > :last-child {
+      background-color: #f1817e; }
+  .procedure-card__img {
+    max-width: 100%;
+    margin: 0 auto;
+    margin-bottom: 2rem; }
+  .procedure-card__text {
+    margin: 0 auto;
+    margin-top: 3rem;
+    margin-bottom: 5rem; }
 
 .service-card {
   width: 24%;
@@ -188,7 +226,6 @@ body {
         max-width: 100%; }
 
 .about {
-  margin: 8rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -199,3 +236,16 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-between; }
+
+.procedures {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  text-align: center; }
+
+.procedure__cards {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: stretch; }
