--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -30,7 +30,6 @@
 }
 
 .about {
-  margin: 8rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -42,4 +41,19 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+
+.procedures {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  text-align: center;
+}
+
+.procedure__cards {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: stretch;
 }
