--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 @import "components/button";
 @import "components/procedure-card";
 @import "components/service-card";
+@import "components/slide";
 
 @import "layout/footer";
 @import "layout/header";
