--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -57,3 +57,8 @@
   justify-content: space-evenly;
   align-items: stretch;
 }
+
+.slider {
+  background-color: $color-pink-light;
+  padding: 10rem;
+}
