--- a/css/style.css
+++ b/css/style.css
@@ -159,17 +159,32 @@ body {
     color: #fff;
     font-family: "Rufina", serif; }
 
-.nav {
-  width: 49%;
-  margin-left: 14rem;
-  padding: 2rem;
-  display: grid;
-  grid-template-columns: max-content 1fr;
+.slide {
+  display: flex;
+  flex-direction: column;
   align-items: center;
+  justify-content: space-between;
+  font-family: "Rufina", serif;
+  text-align: center;
+  font-size: 2rem; }
+  .slide__img {
+    max-width: 100%;
+    border-radius: 50%;
+    margin-bottom: 2.3rem; }
+  .slide__quote {
+    width: 80%;
+    margin-bottom: 4rem; }
+  .slide__caption-title {
+    font-family: "Roboto", sans-serif;
+    font-size: 1.8rem; }
+
+.nav {
+  width: 70%;
+  padding: 2rem;
+  display: flex;
+  justify-content: space-between;
   z-index: 100;
   position: relative; }
-  .nav__logo img {
-    max-width: 80%; }
   .nav__navigation {
     width: 60%;
     margin-left: 10rem;
@@ -177,14 +192,23 @@ body {
     justify-content: space-between; }
   .nav__item {
     display: inline-block;
-    font-size: 1.4rem;
+    font-size: 2rem;
     text-transform: uppercase;
     margin-right: 1.5rem;
-    color: #000;
+    color: #263a41;
     font-weight: 500; }
+    .nav__item:not(:first-of-type) {
+      margin-top: 3rem; }
   .nav__link {
     text-decoration: none;
-    color: #263a41; }
+    transition: all 0.2s;
+    padding-bottom: 1rem; }
+    .nav__link:link, .nav__link:visited {
+      color: #263a41;
+      border-bottom: 2px solid transparent; }
+    .nav__link:hover:not(#nav__logo), .nav__link:active:not(#nav__logo) {
+      color: #f1817e;
+      border-bottom: 2px solid #f1817e; }
 
 .header__content {
   width: 50%;
@@ -249,3 +273,7 @@ body {
   flex-direction: row;
   justify-content: space-evenly;
   align-items: stretch; }
+
+.slider {
+  background-color: #fff9f8;
+  padding: 10rem; }
